example/tests/snapshots/comprehensive_snapshots__boolean_expr__error_empty.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 0,
            end: 0,
        },
    ],
)
