example/tests/snapshots/comprehensive_snapshots__boolean_expr__literal_true.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"true\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 2,
            end: 2,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 3,
            end: 3,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 4,
            end: 4,
        },
    ],
)
